--- a/huddleupui/src/assets/main-layout.css
+++ b/huddleupui/src/assets/main-layout.css
@@ -4,6 +4,6 @@
 	font-optical-sizing: auto;
 	font-weight: 400;
 	font-style: normal;
-	color: 050505 !important;
+	color: #050505 !important;
     font-size:16px;
 }
