--- a/huddleupui/src/index.css
+++ b/huddleupui/src/index.css
@@ -26,3 +26,29 @@ code {
   font-weight: 600;
 }
 
+.badge {
+  display: flex;
+    align-items: center;
+    justify-content: center;
+  padding: 2px 8px;
+  margin: 0 4px;
+  background-color: #c49797;
+  border-radius: 12px;
+  font-size: 12px;
+  color: #333;
+}
+.badges {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 8px;
+}
+.post-actions {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 16px 0;
+}
+.post-actions button {
+  margin-left: 8px;
+}
+
